2004-01-15	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* configure.ac: Add subdir-objects to AUTOMAKE_OPTIONS.
	Require automake-1.8.2.
	Add RTEMS_PROG_CCAS.
	Add AM_PROG_CC_C_O.

2004-01-14	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* wrapup/Makefile.am: Re-add dirstamps to PRE/TMPINSTALL_FILES.
	Add PRE/TMPINSTALL_FILES to CLEANFILES.
	* automake/lib.am: Remove TMPINSTALL_FILES.

2004-01-07	Joel Sherrill <joel@OARcorp.com>

	* aclocal/rtems-cpu-subdirs.m4: mips64orion port removed as mips port
	more completely covers the MIPS family.

2003-12-18	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* wrapup/Makefile.am: Reflect changes to shmdr.

2003-12-17  Joel Sherrill <joel@OARcorp.com>

    * aclocal/version.m4: Updated to rtems-20031217-test.

2003-12-17  

    * c/src/aclocal/version.m4: Updated to rtems-20031217-test.

2003-12-17  

    * c/src/aclocal/version.m4: Updated to rtems-20031217-test.

2003-12-15	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* automake/compile.am: Remove LINK_LIBS (Unused).
	* configure.ac: Reflect changes to RTEMS_CONFIG_SUBDIR.

2003-12-14	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* automake/compile.am: s,${PROJECT_RELEASE}/lib,$(PROJECT_LIB),g.
	* wrapup/Makefile.am: s,${PROJECT_RELEASE}/lib,$(PROJECT_LIB),g.
	* acinclude.m4: Rework RTEMS_CONFIG_SUBDIR.
	* Makefile.am: Reflect changes to RTEMS_CONFIG_SUBDIR.

2003-12-14	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* support/Makefile.am: Pass @RTEMS_BSP@ to AM_CPPFLAGS.

2003-12-13	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* aclocal/env-rtemsbsp.m4: Add PROJECT_LIB.
	* wrapup/Makefile.am: s,${PROJECT_RELEASE}/lib,$(PROJECT_LIB),g.

2003-12-12	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* wrapup/Makefile.am: Use mkdir_p. Remove dirs from
	PRE/TMPINSTALL_FILES.

2003-12-12	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* aclocal/lead-dot.m4: Remove (Provided by automake-1.8).
	* automake/compile.am: Use mkdir_p instead of mkinstalldirs.
	* automake/lib.am: Use mkdir_p instead of mkdir.